# cpu6502

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
cpu/: .gitattributes  Cargo.toml
cpu/src/: lib.rs
cpu/src/cpu/: cpu_impl.rs  logging_memory.rs
cpu/src/instr/: m_instr.rs
cpu/src/instr/opcodes/: decoded_opcode.rs
cpu/src/pinout/: mod.rs
cpu/testdata/: reference.6502log  trace.log.txt
cpu/tests/: nes_test.rs  perf_test.rs
memory/: Cargo.toml
memory/src/: lib.rs  memory_space.rs
src/: alu.rs  cpu.rs  instr.rs  instructions.rs  lib.rs  pinout.rs  registers.rs
src/alu/: mod.rs  tests.rs
src/cpu/: cpu_impl.rs  cpu_impl2.rs  interrupt.rs  logging_memory.rs  mod.rs  perf_time.rs  write_cycle_query.rs
src/instr/: disassemble.rs  instr_impl.rs  instr_operation.rs  instr_sequences.rs  m_instr.rs  mod.rs  opcodes.rs
src/instr/instr_impl/: tests.rs
src/instr/instr_impl/tests/: helpers.rs  instr.rs  instr_alu_op.rs  instr_flow.rs  instr_transfer.rs  op.rs
src/instr/opcodes/: decode_logic.rs  decode_switch.rs  decoded_opcode.rs  mod.rs
src/instructions/: instruction_operation.rs  instruction_sequences.rs  microinstructions.rs  opcodes.rs
src/interrupts/: mod.rs
src/memory/: memory_space.rs  mod.rs
src/register_file/: mod.rs  registers.rs  status_register.rs
src/registers/: mod.rs  reg16.rs  reg8.rs  register_file.rs  status_register.rs
testdata/: output.log.txt  trace.log.txt
tests/: instr_cycle_count.rs  nes_test.rs  perf_test.rs  test_computer.rs
