[package]
name = "cpu6502"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4"
strum = "0.27"
strum_macros = "0.27"
log = { version = "0.4", optional = true }
simplelog = { version = "0.12.0", optional = true }
disasm6502 = { version = "0.2.2", optional = true }
enum-primitive-derive = {  version = "0.3.0", optional = true }
num-traits = {  version = "0.2", optional = true }
arrayvec = { version = "0.7", optional = true }

[features]
default = []
decimal = []
undoc_opcodes = []
logging = ["dep:log", "dep:simplelog", "dep:disasm6502", "dep:arrayvec"]
decode_logic = ["dep:enum-primitive-derive", "dep:num-traits"]
gen_write_cycle_query = []